--- a/dame.html
+++ b/dame.html
@@ -1,23 +1,23 @@
-<form action="dames" method="post">
-  <input type="text" name="suit" value="Spade"/>
-  <input type="number" name="rank" value="12"/>
-  <input type="color" name="color" value="black"/>
-</form>
+<section class="spade">
+  <h1>Dame</h1>
+  <var>♠</var>
+  <hr>
+</section>
 
-<form action="dames" method="post">
-  <input type="text" name="suit" value="Heart"/>
-  <input type="number" name="rank" value="12"/>
-  <input type="color" name="color" value="red"/>
-</form>
+<section class="heart">
+  <h1>Dame</h1>
+  <var>♥</var>
+  <hr>
+</section>
 
-<form action="dames" method="post">
-  <input type="text" name="suit" value="Diamond"/>
-  <input type="number" name="rank" value="12"/>
-  <input type="color" name="color" value="red"/>
-</form>
+<section class="diamond">
+  <h1>Dame</h1>
+  <var>♦</var>
+  <hr>
+</section>
 
-<form action="dames" method="post">
-  <input type="text" name="suit" value="Club"/>
-  <input type="number" name="rank" value="12"/>
-  <input type="color" name="color" value="black"/>
-</form>
+<section class="club">
+  <h1>Dame</h1>
+  <var>♣</var>
+  <hr>
+</section>
