--- a/dame.html
+++ b/dame.html
@@ -1,22 +1,22 @@
-<section class="spade">
+<section class="spades">
   <h1>Dame</h1>
   <var>♠</var>
   <hr>
 </section>
 
-<section class="heart">
+<section class="hearts">
   <h1>Dame</h1>
   <var>♥</var>
   <hr>
 </section>
 
-<section class="diamond">
+<section class="diamonds">
   <h1>Dame</h1>
   <var>♦</var>
   <hr>
 </section>
 
-<section class="club">
+<section class="clubs">
   <h1>Dame</h1>
   <var>♣</var>
   <hr>
